--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,20 +15,20 @@
         <div class="form">
             <h1>Crea tu cuenta</h1>
             <div class="grupo">
-                <input type="text" name="" id="name" required><span class="barra"></span>
+                <input type="text" name="name" id="name" required><span class="barra"></span>
                 <label for=""> FirstName</label>
             </div>
             <div class="grupo">
-                <input type="text" name="" id="name" required><span class="barra"></span>
+                <input type="text" name="name" id="name" required><span class="barra"></span>
                 <label for=""> LastName</label>
             </div>
         <div class="grupo">
-            <input type="email" name="" id="name" required><span class="barra"></span>
+            <input type="email" name="email" id="name" required><span class="barra"></span>
             <label for="">Email</label>
             <p><i class="fa-solid fa-circle-info"></i>Accedé con el mail que realizaste la compra</p>
         </div>
         <div class="grupo">
-            <input type="password" name="" id="name" required><span class="barra"></span>
+            <input type="password" name="password" id="name" required><span class="barra"></span>
             <label for="">Contraseña</label>
             <p>Usá entre 8 y 16 carácteres</p>
         <div>
