--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,20 +16,20 @@
             <h1>Crea tu cuenta</h1>
             <div class="grupo">
                 <input type="text" name="name" id="name" required><span class="barra"></span>
-                <label for=""> FirstName</label>
+                <label for="FirstName"> Nombre</label>
             </div>
             <div class="grupo">
                 <input type="text" name="name" id="name" required><span class="barra"></span>
-                <label for=""> LastName</label>
+                <label for="LastName"> Apellido</label>
             </div>
         <div class="grupo">
             <input type="email" name="email" id="name" required><span class="barra"></span>
-            <label for="">Email</label>
+            <label for="email">Email</label>
             <p><i class="fa-solid fa-circle-info"></i>Accedé con el mail que realizaste la compra</p>
         </div>
         <div class="grupo">
             <input type="password" name="password" id="name" required><span class="barra"></span>
-            <label for="">Contraseña</label>
+            <label for="password">Contraseña</label>
             <p>Usá entre 8 y 16 carácteres</p>
         <div>
             <label for="user"> Elige una categoria</label>
