Podemos guardar usuarios!!!

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous"/>
 </head>
 <body>
-    <form action="" method="POST" id="form" enctype="multipart/form-data">
+    <form action="/user/without-login" method="POST" id="form" enctype="multipart/form-data">
         <div class="form">
             <h1>Crea tu cuenta</h1>
             <div class="grupo">
