agregando vista usuario

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -38,6 +38,10 @@
                 <option value="admin">Admin </option>
             </select>
         </div>
+        <div>
+            <label for="image" class="">Carga tu foto perfil</label>
+                        <input type="file" name="image" accept=".jpg" accept=".png" id="image" class="">
+        </div>
         </div>
             <button type="submit"> Registrate</button>
             <p>Al registrarse aceptas los <a href="">Terminos y Condiciones</a></p>
