--- a/views/user.ejs
+++ b/views/user.ejs
@@ -13,12 +13,20 @@
     </header>
 
     <main>
-        <h1>Hola, <%= user.first-name %> </h1>
-        <img src="/public/images/avatars/<%= user.image %> " alt="Foto de perfil">
+        <h1>Hola, <%= user.firstName %> </h1>
+        <br>
+        <img src="/images/avatars/<%= user.image %> " alt="Foto de perfil">
+        <br>
         <h1>Correo electronico: <%= user.email %> </h1>
+        <br>
         <h1>Categoria: <%= user.category %> </h1>
     </main>
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>
         <%- include('partials/footer.ejs') %>
     </footer>
