--- a/public/css/login.css
+++ b/public/css/login.css
@@ -21,6 +21,13 @@ h1 {
     text-align: center;
     font-weight: 700;
 }
+
+form div .recordame{
+    display: flex;
+    flex-direction: row;
+}
+
+
 form {
     background: #fff;
     padding: 40px;
@@ -55,9 +62,12 @@ input:focus {
 label {
     color: #666;
     font-size: 16px;
-    position: absolute;
-    bottom: 60px;
 }
+
+form .text-danger {
+    color: red;
+}
+
 
 button{
     font-family: 'roboto';
