Agregando boton de registrar

--- a/views/partials/header-navbar.ejs
+++ b/views/partials/header-navbar.ejs
@@ -8,7 +8,7 @@
           <p><i class="fa-solid fa-phone"></i> VENTAS: 0800-111-2345</p>
           <p> Lunes a Viernes de 9 a 22. Sabados, Domingos y Feriados de 10 a 18H</p>
          </div>
-          <a href=""><i class="fa-regular fa-pen-to-square"></i> Reserva</a>
+          <a href="/user/without-login"><i class="fa-regular fa-pen-to-square"></i> Registrar</a>
         <% if (locals.isLogged) { %>
        <a href="">
            <p>Hola! <%= locals.usuarioActual.name%> 
