--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de registro</title>
-    <link href="https://fonts.google.com/specimen/Roboto"
-    rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Roboto" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/register.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
 </head>
+
 <body>
     <form action="/user/without-login" method="POST" id="form" enctype="multipart/form-data">
         <div class="form">
@@ -22,43 +24,46 @@
                 <input type="text" name="name" id="name" required><span class="barra"></span>
                 <label for="LastName"> Apellido</label>
             </div>
-        <div class="grupo">
-            <input type="email" name="email" id="name" required><span class="barra"></span>
-            <label for="email">Email</label>
-            <p><i class="fa-solid fa-circle-info"></i>Accedé con el mail que realizaste la compra</p>
-        </div>
-        <div class="grupo">
-            <input type="password" name="password" id="name" required><span class="barra"></span>
-            <label for="password">Contraseña</label>
-            <p>Usá entre 8 y 16 carácteres</p>
-        <div>
-            <label for="user"> Elige una categoria</label>
-            <select name="user" id="user">
-                <option value="usuario">Usuario </option>
-                <option value="admin">Admin </option>
-            </select>
-        </div>
-        <div>
-            <label for="image" class="">Carga tu foto perfil</label>
-                        <input type="file" name="image" accept=".jpg" accept=".png" id="image" class="">
-        </div>
-        </div>
+            <div class="grupo">
+                <input type="email" name="email" id="name" required><span class="barra"></span>
+                <label for="email">Email</label>
+                <p><i class="fa-solid fa-circle-info"></i>Accedé con el mail que realizaste la compra</p>
+            </div>
+            <div class="grupo">
+                <input type="password" name="password" id="name" required><span class="barra"></span>
+                <label for="password">Contraseña</label>
+                <p>Usá entre 8 y 16 carácteres</p>
+            </div>
+
+            <div class="grupo">
+                <label for="user"> Elige una categoria</label>
+                <select name="user" id="user">
+                    <option value="usuario">Usuario </option>
+                    <option value="admin">Admin </option>
+                </select>
+            </div>
+            <div class="grupo">
+                <label for="image" class="">Carga tu foto perfil</label>
+                <input type="file" name="image" accept=".jpg" accept=".png" id="image" class="">
+            </div>
+
             <button type="submit"> Registrate</button>
             <p>Al registrarse aceptas los <a href="">Terminos y Condiciones</a></p>
         </div>
-            
-                <h4>Ingresá con un sólo paso.</h4>
-            
+
+        <h4>Ingresá con un sólo paso.</h4>
+
         <div class="botones">
-                    <button type="button"> <a href=""><i class="fa-brands fa-facebook"></i>Ingresar con Facebook</a></button>
-                    <button type="button"> <a href=""><i class="fa-brands fa-google"></i>Ingresar con Google</a></button>
-                    <button type="button"> <a href=""><i class="fa-brands fa-apple"></i>Ingresar con Apple</a></button>
+            <button type="button"> <a href=""><i class="fa-brands fa-facebook"></i>Ingresar con Facebook</a></button>
+            <button type="button"> <a href=""><i class="fa-brands fa-google"></i>Ingresar con Google</a></button>
+            <button type="button"> <a href=""><i class="fa-brands fa-apple"></i>Ingresar con Apple</a></button>
         </div>
-                <h4>¿Ya tenés cuenta?</h4>
-                <div class="ingresar">
-                <button type="button">Ingresar</button>
+        <h4>¿Ya tenés cuenta?</h4>
+        <div class="ingresar">
+            <button type="button">Ingresar</button>
         </div>
     </form>
-</main>    
+    </main>
 </body>
+
 </html>
