Subiendo cambios, trabajando con validaciones, controladores y base de datos

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -40,7 +40,7 @@
                     </div>
                     <div>
                         <label for="transport" class="form-label">Transporte:</label>
-                        <select name="transport" id="transport" class="form-input">
+                        <select name="transportName" id="transportName" class="form-input">
                             <option value="">Elegí</option>
                             <option value="Vuelo">Vuelo</option>
                             <option value="Bus">Bus</option>
@@ -52,7 +52,7 @@
                     </div>
                     <div>
                         <label for="hotel" class="form-label">Nombre del hotel:</label>
-                        <input type="text" id="hotel" name="hotel" class="form-input" required>
+                        <input type="text" id="hotelName" name="hotelName" class="form-input" required>
                     </div>
                     <div>
                         <label for="nights" class="form-label">Cantidad de noches:</label>
