--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,7 +20,7 @@
 
     </header>
 
-        <form action="/edit/<%= product.id %>?_method=PATCH " method="POST" enctype="multipart/form-data" id="edit">
+        <form action="/products/edit/<%= product.id %>?_method=PATCH " method="POST" enctype="multipart/form-data" id="edit">
 
             
             <div class="input">
@@ -33,14 +33,29 @@
                     <div>
                         <label for="productName" class="form-label">Nombre del producto:</label>
                         <input type="text" id="productName" name="productName" value="<%= product.productName %>" required>
+                        <% if (locals.errors && errors.productName) { %> 
+                            <div class="text-danger">
+                                <% errors.productName.msg %> 
+                            </div>
+                        <% } %>  
                     </div>
                     <div>
                         <label for="description" class="form-label">Descripción:</label>
                         <textarea name="description" id="description" value="<%= product.description %>" class="form-input" required></textarea>
+                        <% if (locals.errors && errors.description) { %> 
+                            <div class="text-danger">
+                                <% errors.description.msg %> 
+                            </div>
+                        <% } %>
                     </div>
                     <div>
                         <label for="bigImage" class="form-label">Carga la imagen de tu producto(872x497):</label>
                         <input type="file" name="bigImage" accept=".jpg" accept=".png" id="bigImage" class="form-input">
+                        <% if (locals.errors && errors.bigImage) { %> 
+                            <div class="text-danger">
+                                <% errors.bigImage.msg %> 
+                            </div>
+                        <% } %>
                         <label for="mediumImage" class="form-label">Carga la imagen de tu producto(746x312):</label>
                         <input type="file" name="mediumImage" accept=".jpg" accept=".png" id="mediumImage" class="form-input">
                         <label for="littleImage1" class="form-label">Carga la imagen de tu producto(372x187):</label>
@@ -55,36 +70,66 @@
                             <option value="Vuelo">Vuelo</option>
                             <option value="Bus">Bus</option>
                         </select>
+                        <% if (locals.errors && errors.transport) { %> 
+                            <div class="text-danger">
+                                <% errors.transport.msg %> 
+                            </div>
+                        <% } %>
                     </div>
                     <div>
                         <label for="operatedBy" class="form-label">Operado por:</label>
                         <input type="text" id="operatedBy" name="operatedBy" value="<%= product.operatedBy %>" class="form-input" required>
+                        <% if (locals.errors && errors.operatedBy) { %> 
+                            <div class="text-danger">
+                                <% errors.operatedBy.msg %> 
+                            </div>
+                        <% } %>
                     </div>
                     <div>
                         <label for="hotel" class="form-label">Nombre del hotel:</label>
                         <input type="text" id="hotel" name="hotel" value="<%= product.hotel %>" class="form-input" required>
+                        <% if (locals.errors && errors.hotel) { %> 
+                            <div class="text-danger">
+                                <% errors.hotel.msg %> 
+                            </div>
+                        <% } %>
                     </div>
                     <div>
                         <label for="nights" class="form-label">Cantidad de noches:</label>
                         <input type="text" id="nights" name="nights" value="<%= product.nights %>" class="form-input" required>
+                        <% if (locals.errors && errors.nights) { %> 
+                            <div class="text-danger">
+                                <% errors.nightsmsg %> 
+                            </div>
+                        <% } %>
                     </div>
                     <div>
                         <label for="roomType" class="form-label">Tipo de habitación:</label>
                         <input type="text" id="roomType" name="roomType" value="<%= product.roomType %>" class="form-input" required>
+                        <% if (locals.errors && errors.roomType) { %> 
+                            <div class="text-danger">
+                                <% errors.roomType.msg %> 
+                            </div>
+                        <% } %>
                     </div>
                     <div>
                         <h4 class="form-input">Actividades:</h4>
                         <div>
                             <label for="activity1" class="form-label">Actividad 1:</label>
-                            <input type="text" id="activity1" name="activity1" value="<%= product.activities.activity1 %>" class="form-input" required>
+                            <input type="text" id="activity1" name="activity1" value="<%= product.activity1 %>" class="form-input" required>
+                            <% if (locals.errors && errors.activity1) { %> 
+                                <div class="text-danger">
+                                    <% errors.activity1.msg %> 
+                                </div>
+                            <% } %>
                         </div>
                         <div>
                             <label for="activity2" class="form-label">Actividad 2(Opcional):</label>
-                            <input type="text" id="activity2" name="activity2" value="<%= product.activities.activity2 %>" class="form-input">
+                            <input type="text" id="activity2" name="activity2" value="<%= product.activity2 %>" class="form-input">
                         </div>
                         <div>
                             <label for="activity3" class="form-label">Actividad 3(Opcional):</label>
-                            <input type="text" id="activity3" name="activity3" value="<%= product.activities.activity3 %>" class="form-input">
+                            <input type="text" id="activity3" name="activity3" value="<%= product.activity3 %>" class="form-input">
                         </div>
                     </div>
                     <div>
@@ -105,6 +150,11 @@
                     <div>
                         <label for="price" class="form-label">Precio del producto:</label>
                         <input type="text" id="price" name="price" value="<%= product.price %>"  class="form-input"required>
+                        <% if (locals.errors && errors.price) { %> 
+                            <div class="text-danger">
+                                <% errors.price.msg %> 
+                            </div>
+                        <% } %>
                     </div>
 
             </div>
