--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -80,13 +80,13 @@
             <article class="box1">
                 <p class="tittle"><i class="fa-regular fa-map"></i>Actividad</p>
                 <p class="top">
-                    <%= products.activities.activityName %>
+                    <%=/*  products.activities.activityName  */%>
                 </p>
                 <p class="top">
-                    <%= products.activities.activityName %>
+                    <%= /* products.activities.activityName */ %>
                 </p>
                 <p class="top">
-                    <%= products.activities.activityName %>
+                    <%= /* products.activities.activityName */ %>
                 </p>
                 <a href="" class="button2">Ver actividad</a>
 
