Agregando archivo catalogue.css

--- a/views/catalogue.ejs
+++ b/views/catalogue.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include('partials/head', {title: 'Catalogue' }) %>
+    <link rel="stylesheet" href="/css/catalogue.css">
 </head>
 <body>
     <header>
